feat(partnership): add partnership list to public & profile endpoints and replace placeholder images
